# poundingsystems-gamepad

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build_and_test.yml
assets/: moonbase_api_config.json
packaging/: GamepadMIDI.entitlements  GamepadMIDIentitlements.plist  Info.plist  installer.iss
packaging/linux/: run.sh
source/: GamepadComponent.cpp  GamepadComponent.h  GamepadManager.cpp  GamepadManager.h  Main.cpp  MainWindow.h  MidiCCMapping.h  MidiOutputManager.cpp  MidiOutputManager.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp  StandaloneApp.h  StatusBar.cpp  StatusBar.h
source/components/: AnalogStick.cpp  AnalogStick.h  ClassicButton.cpp  ClassicButton.h  DirectionalPad.cpp  DirectionalPad.h  FaceButtons.cpp  FaceButtons.h  Gyroscope.cpp  Gyroscope.h  MidiDeviceSelector.cpp  MidiDeviceSelector.h  MidiMappingAccordion.cpp  MidiMappingAccordion.h  MidiMappingEditor.cpp  MidiMappingEditor.h  MidiMappingEditorWindow.cpp  MidiMappingEditorWindow.h  ModernGamepadComponent.cpp  ModernGamepadComponent.h  ModernLookAndFeel.cpp  ModernLookAndFeel.h  SensorDisplay.cpp  SensorDisplay.h  ShoulderSection.cpp  ShoulderSection.h  TouchPad.cpp  TouchPad.h  TriggerButton.cpp  TriggerButton.h
tests/: PluginBasics.cpp
tools/: check_entitlements.sh  macos_midi_help.sh  setup_macos_iac.sh
